# new-amul

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: Parsing.md
import/: README.md  atom.cpp  atom.h  atomtype.h  buffer.h  char-to-atom.h  gen_charmap.cpp  mapping.cpp  modules.cpp  modules.h  msgports.cpp  msgports.h  scanner.cpp  scanner.h  scanner2.cpp  sourcefile.h  spinlock.cpp  spinlock.h  token.h  tokentype.h
include/: README.md
samples/: README.md
samples/minimal/: README.md
samples/precious/: README.md  language.smg  mobiles.smg  obdescs.smg  objects.smg  reset.text  rooms.smg  scenario.text  syns.smg  sysmsg.smg  system.smg  system.txt  testfile.smg  title.text  travel.smg  umsg.smg
src/: CMakeLists.txt  README.md  atom.cpp  atom.h  buffer.h  char-to-atom.h
tests/: CMakeLists.txt  gtest_aliases.h  test_atom.cpp  test_buffer.cpp
